--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+# Add the env files here
 .env
+passcode.txt
